crates/parser/tests/parse/module-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..34
  MODULE@0..33
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_FUNC@10..16
      L_PAREN@10..11 "("
      KEYWORD@11..15 "func"
      R_PAREN@15..16 ")"
    WHITESPACE@16..19 "\n  "
    ERROR@19..20 "("
    ERROR@20..21 "f"
    ERROR@21..22 ")"
    WHITESPACE@22..25 "\n  "
    MODULE_FIELD_FUNC@25..31
      L_PAREN@25..26 "("
      KEYWORD@26..30 "func"
      R_PAREN@30..31 ")"
    WHITESPACE@31..32 "\n"
    R_PAREN@32..33 ")"
  WHITESPACE@33..34 "\n"

error: unexpected token
  ┌─ module-malformed.wat:3:4
  │
3 │   (f)
  │    ^

error: unexpected token
  ┌─ module-malformed.wat:3:5
  │
3 │   (f)
  │     ^
